prometheus-mysql-exporter/prometheus-mysql-exporter.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-mysql-exporter
  namespace: infra-mysql
spec:
  rules:
  - host: mysql-exporter.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-mysql-exporter
            port:
              number: 9104
